minikube-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-api-deployment
  labels:
    app: test-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-service
  template:
    metadata:
      labels:
        app: java-service
    spec:
      containers:
        - name: java-api
          image: java-api-image
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: test-api-service
  labels:
    app: java-api-service
spec:
  selector:
    app: java-service
  ports:
    - port: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: test-runner-pod
  labels:
    app: test-run-pod
spec:
  restartPolicy: Never
  containers:
    - name: test-runner
      image: test-runner-image
      imagePullPolicy: Never
      ports:
        - containerPort: 5030
---
apiVersion: v1
kind: Service
metadata:
  name: runner-service
spec:
  selector:
    app: test-run-pod
  ports:
    - port: 5030
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: test-api-service
                port:
                  number: 8080
